Get tweet dataset

--- a/notebooks/extract_tweets.ipynb
+++ b/notebooks/extract_tweets.ipynb
@@ -65,7 +65,7 @@
     {
      "data": {
       "text/plain": [
-       "User(_api=<tweepy.api.API object at 0x10c5ea130>, _json={'id': 1435410232604184581, 'id_str': '1435410232604184581', 'name': 'aaaaaa', 'screen_name': 'aaaaaa82502990', 'location': '', 'description': '', 'url': None, 'entities': {'description': {'urls': []}}, 'protected': False, 'followers_count': 0, 'friends_count': 0, 'listed_count': 0, 'created_at': 'Wed Sep 08 01:10:53 +0000 2021', 'favourites_count': 0, 'utc_offset': None, 'time_zone': None, 'geo_enabled': False, 'verified': False, 'statuses_count': 0, 'lang': None, 'contributors_enabled': False, 'is_translator': False, 'is_translation_enabled': False, 'profile_background_color': 'F5F8FA', 'profile_background_image_url': None, 'profile_background_image_url_https': None, 'profile_background_tile': False, 'profile_image_url': 'http://abs.twimg.com/sticky/default_profile_images/default_profile_normal.png', 'profile_image_url_https': 'https://abs.twimg.com/sticky/default_profile_images/default_profile_normal.png', 'profile_link_color': '1DA1F2', 'profile_sidebar_border_color': 'C0DEED', 'profile_sidebar_fill_color': 'DDEEF6', 'profile_text_color': '333333', 'profile_use_background_image': True, 'has_extended_profile': True, 'default_profile': True, 'default_profile_image': True, 'following': False, 'follow_request_sent': False, 'notifications': False, 'translator_type': 'none', 'withheld_in_countries': [], 'suspended': False, 'needs_phone_verification': False}, id=1435410232604184581, id_str='1435410232604184581', name='aaaaaa', screen_name='aaaaaa82502990', location='', description='', url=None, entities={'description': {'urls': []}}, protected=False, followers_count=0, friends_count=0, listed_count=0, created_at=datetime.datetime(2021, 9, 8, 1, 10, 53), favourites_count=0, utc_offset=None, time_zone=None, geo_enabled=False, verified=False, statuses_count=0, lang=None, contributors_enabled=False, is_translator=False, is_translation_enabled=False, profile_background_color='F5F8FA', profile_background_image_url=None, profile_background_image_url_https=None, profile_background_tile=False, profile_image_url='http://abs.twimg.com/sticky/default_profile_images/default_profile_normal.png', profile_image_url_https='https://abs.twimg.com/sticky/default_profile_images/default_profile_normal.png', profile_link_color='1DA1F2', profile_sidebar_border_color='C0DEED', profile_sidebar_fill_color='DDEEF6', profile_text_color='333333', profile_use_background_image=True, has_extended_profile=True, default_profile=True, default_profile_image=True, following=False, follow_request_sent=False, notifications=False, translator_type='none', withheld_in_countries=[], suspended=False, needs_phone_verification=False)"
+       "User(_api=<tweepy.api.API object at 0x1457a62b0>, _json={'id': 1435410232604184581, 'id_str': '1435410232604184581', 'name': 'aaaaaa', 'screen_name': 'aaaaaa82502990', 'location': '', 'description': '', 'url': None, 'entities': {'description': {'urls': []}}, 'protected': False, 'followers_count': 0, 'friends_count': 0, 'listed_count': 0, 'created_at': 'Wed Sep 08 01:10:53 +0000 2021', 'favourites_count': 0, 'utc_offset': None, 'time_zone': None, 'geo_enabled': False, 'verified': False, 'statuses_count': 0, 'lang': None, 'contributors_enabled': False, 'is_translator': False, 'is_translation_enabled': False, 'profile_background_color': 'F5F8FA', 'profile_background_image_url': None, 'profile_background_image_url_https': None, 'profile_background_tile': False, 'profile_image_url': 'http://abs.twimg.com/sticky/default_profile_images/default_profile_normal.png', 'profile_image_url_https': 'https://abs.twimg.com/sticky/default_profile_images/default_profile_normal.png', 'profile_link_color': '1DA1F2', 'profile_sidebar_border_color': 'C0DEED', 'profile_sidebar_fill_color': 'DDEEF6', 'profile_text_color': '333333', 'profile_use_background_image': True, 'has_extended_profile': True, 'default_profile': True, 'default_profile_image': True, 'following': False, 'follow_request_sent': False, 'notifications': False, 'translator_type': 'none', 'withheld_in_countries': [], 'suspended': False, 'needs_phone_verification': False}, id=1435410232604184581, id_str='1435410232604184581', name='aaaaaa', screen_name='aaaaaa82502990', location='', description='', url=None, entities={'description': {'urls': []}}, protected=False, followers_count=0, friends_count=0, listed_count=0, created_at=datetime.datetime(2021, 9, 8, 1, 10, 53), favourites_count=0, utc_offset=None, time_zone=None, geo_enabled=False, verified=False, statuses_count=0, lang=None, contributors_enabled=False, is_translator=False, is_translation_enabled=False, profile_background_color='F5F8FA', profile_background_image_url=None, profile_background_image_url_https=None, profile_background_tile=False, profile_image_url='http://abs.twimg.com/sticky/default_profile_images/default_profile_normal.png', profile_image_url_https='https://abs.twimg.com/sticky/default_profile_images/default_profile_normal.png', profile_link_color='1DA1F2', profile_sidebar_border_color='C0DEED', profile_sidebar_fill_color='DDEEF6', profile_text_color='333333', profile_use_background_image=True, has_extended_profile=True, default_profile=True, default_profile_image=True, following=False, follow_request_sent=False, notifications=False, translator_type='none', withheld_in_countries=[], suspended=False, needs_phone_verification=False)"
       ]
      },
      "execution_count": 4,
@@ -132,15 +132,6 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "scraped_tweets = scrape_tweets(['blizzard'], 10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -171,33 +162,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Fri Oct 08 10:50:59 +0000 2021</td>\n",
-       "      <td>duke_unreal</td>\n",
-       "      <td>RT @JRobnson: @DSACostanza &amp;gt;Ex blizzard. ht...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Fri Oct 08 10:50:31 +0000 2021</td>\n",
-       "      <td>RussellBoyce1</td>\n",
-       "      <td>RT @alfbridge43: @ZBankEnt @RussellBoyce1 My w...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Fri Oct 08 10:50:02 +0000 2021</td>\n",
-       "      <td>Anna97659370</td>\n",
-       "      <td>RT @LambySeriesGG: Courtesy of Blizzard i have...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Fri Oct 08 10:49:48 +0000 2021</td>\n",
-       "      <td>Opuculus</td>\n",
+       "      <td>Fri Oct 08 12:15:32 +0000 2021</td>\n",
+       "      <td>DakotaDW_</td>\n",
        "      <td>RT @Vahn16: if I was \"committed to making acti...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Fri Oct 08 12:15:15 +0000 2021</td>\n",
+       "      <td>ACanadianHorse</td>\n",
+       "      <td>RT @Kotaku: California steps in to prevent Act...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Fri Oct 08 12:15:07 +0000 2021</td>\n",
+       "      <td>CHFHope</td>\n",
+       "      <td>Which of these flavours is your fave? \\nShare ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Fri Oct 08 12:14:46 +0000 2021</td>\n",
+       "      <td>ItsOasus</td>\n",
+       "      <td>RT @Kotaku: California steps in to prevent Act...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Fri Oct 08 10:49:09 +0000 2021</td>\n",
-       "      <td>antonybearpark</td>\n",
-       "      <td>#INKTOBER DAY 8: WATCH\\n- - -\\n#inktober2021 #...</td>\n",
+       "      <td>Fri Oct 08 12:14:37 +0000 2021</td>\n",
+       "      <td>ali18pot</td>\n",
+       "      <td>RT @dk_deters: CHRISTMAS ONCE AGAIN\\nA missing...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -207,33 +198,33 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>495</th>\n",
-       "      <td>Fri Oct 08 06:14:07 +0000 2021</td>\n",
-       "      <td>dotoro_3</td>\n",
+       "      <td>Fri Oct 08 08:11:48 +0000 2021</td>\n",
+       "      <td>Stubborn_Tort</td>\n",
        "      <td>RT @Vahn16: if I was \"committed to making acti...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>496</th>\n",
-       "      <td>Fri Oct 08 06:13:42 +0000 2021</td>\n",
-       "      <td>TheAlceste</td>\n",
+       "      <td>Fri Oct 08 08:11:26 +0000 2021</td>\n",
+       "      <td>sguedex</td>\n",
        "      <td>RT @Vahn16: if I was \"committed to making acti...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>497</th>\n",
-       "      <td>Fri Oct 08 06:12:30 +0000 2021</td>\n",
-       "      <td>Graemeelliott1</td>\n",
-       "      <td>@Darkladycosplay @Warcraft @Blizzard_Ent Genui...</td>\n",
+       "      <td>Fri Oct 08 08:11:18 +0000 2021</td>\n",
+       "      <td>y0ungsean</td>\n",
+       "      <td>Taking a hobbit through a blizzard with ⁦@vala...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>498</th>\n",
-       "      <td>Fri Oct 08 06:12:10 +0000 2021</td>\n",
-       "      <td>Hitsugi_Hime</td>\n",
-       "      <td>@chipfranklin Home Depot, Apple, Blizzard Acti...</td>\n",
+       "      <td>Fri Oct 08 08:11:07 +0000 2021</td>\n",
+       "      <td>JayromeMarzan</td>\n",
+       "      <td>RT @LambySeriesGG: Courtesy of Blizzard i have...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>499</th>\n",
-       "      <td>Fri Oct 08 06:12:02 +0000 2021</td>\n",
-       "      <td>_BarbUnicorn</td>\n",
-       "      <td>RT @theabigailbeck: Stop playing Activision Bl...</td>\n",
+       "      <td>Fri Oct 08 08:10:20 +0000 2021</td>\n",
+       "      <td>TransGirlAbbie</td>\n",
+       "      <td>RT @Vahn16: if I was \"committed to making acti...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -242,35 +233,35 @@
       ],
       "text/plain": [
        "                               date          handle  \\\n",
-       "0    Fri Oct 08 10:50:59 +0000 2021     duke_unreal   \n",
-       "1    Fri Oct 08 10:50:31 +0000 2021   RussellBoyce1   \n",
-       "2    Fri Oct 08 10:50:02 +0000 2021    Anna97659370   \n",
-       "3    Fri Oct 08 10:49:48 +0000 2021        Opuculus   \n",
-       "4    Fri Oct 08 10:49:09 +0000 2021  antonybearpark   \n",
+       "0    Fri Oct 08 12:15:32 +0000 2021       DakotaDW_   \n",
+       "1    Fri Oct 08 12:15:15 +0000 2021  ACanadianHorse   \n",
+       "2    Fri Oct 08 12:15:07 +0000 2021         CHFHope   \n",
+       "3    Fri Oct 08 12:14:46 +0000 2021        ItsOasus   \n",
+       "4    Fri Oct 08 12:14:37 +0000 2021        ali18pot   \n",
        "..                              ...             ...   \n",
-       "495  Fri Oct 08 06:14:07 +0000 2021        dotoro_3   \n",
-       "496  Fri Oct 08 06:13:42 +0000 2021      TheAlceste   \n",
-       "497  Fri Oct 08 06:12:30 +0000 2021  Graemeelliott1   \n",
-       "498  Fri Oct 08 06:12:10 +0000 2021    Hitsugi_Hime   \n",
-       "499  Fri Oct 08 06:12:02 +0000 2021    _BarbUnicorn   \n",
+       "495  Fri Oct 08 08:11:48 +0000 2021   Stubborn_Tort   \n",
+       "496  Fri Oct 08 08:11:26 +0000 2021         sguedex   \n",
+       "497  Fri Oct 08 08:11:18 +0000 2021       y0ungsean   \n",
+       "498  Fri Oct 08 08:11:07 +0000 2021   JayromeMarzan   \n",
+       "499  Fri Oct 08 08:10:20 +0000 2021  TransGirlAbbie   \n",
        "\n",
        "                                                  text  \n",
-       "0    RT @JRobnson: @DSACostanza &gt;Ex blizzard. ht...  \n",
-       "1    RT @alfbridge43: @ZBankEnt @RussellBoyce1 My w...  \n",
-       "2    RT @LambySeriesGG: Courtesy of Blizzard i have...  \n",
-       "3    RT @Vahn16: if I was \"committed to making acti...  \n",
-       "4    #INKTOBER DAY 8: WATCH\\n- - -\\n#inktober2021 #...  \n",
+       "0    RT @Vahn16: if I was \"committed to making acti...  \n",
+       "1    RT @Kotaku: California steps in to prevent Act...  \n",
+       "2    Which of these flavours is your fave? \\nShare ...  \n",
+       "3    RT @Kotaku: California steps in to prevent Act...  \n",
+       "4    RT @dk_deters: CHRISTMAS ONCE AGAIN\\nA missing...  \n",
        "..                                                 ...  \n",
        "495  RT @Vahn16: if I was \"committed to making acti...  \n",
        "496  RT @Vahn16: if I was \"committed to making acti...  \n",
-       "497  @Darkladycosplay @Warcraft @Blizzard_Ent Genui...  \n",
-       "498  @chipfranklin Home Depot, Apple, Blizzard Acti...  \n",
-       "499  RT @theabigailbeck: Stop playing Activision Bl...  \n",
+       "497  Taking a hobbit through a blizzard with ⁦@vala...  \n",
+       "498  RT @LambySeriesGG: Courtesy of Blizzard i have...  \n",
+       "499  RT @Vahn16: if I was \"committed to making acti...  \n",
        "\n",
        "[500 rows x 3 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "id": "yKK67MOBzi5U"
    },
