--- a/notebooks/exploring_extracted_tweets.ipynb
+++ b/notebooks/exploring_extracted_tweets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "minimal-grounds",
+   "id": "billion-graphics",
    "metadata": {
     "id": "jf0jWPeC7zTy"
    },
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "active-carrier",
+   "id": "middle-insider",
    "metadata": {},
    "source": [
     "# Quiz/Hands-on: Exploring extracted tweets"
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "humanitarian-stack",
+   "id": "narrow-month",
    "metadata": {},
    "source": [
     "**Note:** Although the quiz directions indicate to use the previously extracted tweets, I found them to be unsuitable for this activity, as there were not enough data points and it was of a boring topic. Instead, I have rewritten the extract_tweets notebook and scraped 500 tweets from a different topic. The notebook can be found here: https://github.com/temujin-lampasa/social_computing/blob/main/notebooks/extract_tweets.ipynb\n"
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 250,
-   "id": "specified-charter",
+   "id": "domestic-landscape",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "representative-windows",
+   "id": "biblical-costs",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 331,
-   "id": "handled-plenty",
+   "id": "unsigned-terrorist",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "sought-british",
+   "id": "reflected-geometry",
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "surprised-postcard",
+   "id": "removed-kitty",
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "loose-finish",
+   "id": "municipal-cincinnati",
    "metadata": {},
    "source": [
     "## Prepare and Clean Corpus"
@@ -260,7 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "id": "republican-sunday",
+   "id": "yellow-calvin",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "final-defeat",
+   "id": "intended-university",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 238,
-   "id": "alternate-montgomery",
+   "id": "undefined-titanium",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +349,7 @@
   {
    "cell_type": "code",
    "execution_count": 245,
-   "id": "speaking-finance",
+   "id": "distinct-pakistan",
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": 244,
-   "id": "liked-mississippi",
+   "id": "necessary-victoria",
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "juvenile-individual",
+   "id": "noticed-terry",
    "metadata": {},
    "source": [
     "## Get Document Term Matrix (DTM)"
@@ -524,7 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": 258,
-   "id": "tropical-cemetery",
+   "id": "sophisticated-carrier",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": 259,
-   "id": "moderate-folder",
+   "id": "appreciated-california",
    "metadata": {},
    "outputs": [
     {
@@ -1558,7 +1558,7 @@
   {
    "cell_type": "code",
    "execution_count": 265,
-   "id": "initial-flavor",
+   "id": "toxic-content",
    "metadata": {},
    "outputs": [
     {
@@ -1578,7 +1578,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ranking-clock",
+   "id": "finnish-causing",
    "metadata": {},
    "source": [
     "### Get frequencies"
@@ -1587,7 +1587,7 @@
   {
    "cell_type": "code",
    "execution_count": 268,
-   "id": "generous-marina",
+   "id": "metallic-consensus",
    "metadata": {},
    "outputs": [
     {
@@ -1608,7 +1608,7 @@
   {
    "cell_type": "code",
    "execution_count": 283,
-   "id": "comparable-realtor",
+   "id": "large-frederick",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1623,7 +1623,7 @@
   {
    "cell_type": "code",
    "execution_count": 299,
-   "id": "rocky-maria",
+   "id": "revised-contents",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1633,7 +1633,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dietary-failing",
+   "id": "affiliated-acrylic",
    "metadata": {},
    "source": [
     "# Visualizations"
@@ -1641,8 +1641,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
-   "id": "outdoor-suspension",
+   "execution_count": 339,
+   "id": "under-confidentiality",
    "metadata": {},
    "outputs": [
     {
@@ -1666,6 +1666,7 @@
     "ax.set_xlabel('Words')\n",
     "ax.set_ylabel('Frequency')\n",
     "plt.tight_layout()\n",
+    "plt.savefig('../resources/blizz_words.png')\n",
     "plt.show()"
    ]
   }
