--- a/notebooks/analyzing_airline_tweets.ipynb
+++ b/notebooks/analyzing_airline_tweets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "verified-sender",
+   "id": "fixed-telling",
    "metadata": {},
    "source": [
     "# Quiz/Hands-on: Analyzing airline tweets using NLP"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "valuable-feeling",
+   "id": "aware-arnold",
    "metadata": {},
    "source": [
     "## Imports"
@@ -18,8 +18,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "floppy-formation",
+   "execution_count": 71,
+   "id": "latin-interpretation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,8 +33,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "opened-collector",
+   "execution_count": 72,
+   "id": "twelve-plaza",
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "finnish-marble",
+   "id": "spoken-yorkshire",
    "metadata": {},
    "source": [
     "## Load Data"
@@ -62,8 +62,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "certified-child",
+   "execution_count": 73,
+   "id": "boxed-thesaurus",
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
        "[14640 rows x 6 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +255,112 @@
   },
   {
    "cell_type": "markdown",
-   "id": "powerful-discussion",
+   "id": "lonely-joseph",
+   "metadata": {},
+   "source": [
+    "## Text Cleaning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "accredited-crash",
+   "metadata": {},
+   "source": [
+    "It is best practice to maintain two forms of text, for context-aware and word-level tasks.\n",
+    "\n",
+    "**Context Aware Tasks**\n",
+    "\n",
+    "For this, we remove:\n",
+    "* Special characters\n",
+    "    * Except punctuations at the end of a sentence, which is important for dependency parsing.\n",
+    "* leading and trailing whitespaces\n",
+    "* Twitter handles\n",
+    "* hashtags\n",
+    "\n",
+    "**Word-level Tasks:**\n",
+    "\n",
+    "Same as above, but additionally: \n",
+    "* lowercased\n",
+    "* lemmatized\n",
+    "* stopword-removed\n",
+    "* special characters removed\n",
+    "\n",
+    "We also keep the text in its original form, for use in visualizations."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "satellite-cruise",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nltk.stem import WordNetLemmatizer\n",
+    "\n",
+    "class TextCleaner:\n",
+    "    def __init__(self):\n",
+    "        self.lemmatizer = WordNetLemmatizer()\n",
+    "        self.stop = set(stopwords.words(\"english\"))\n",
+    "        \n",
+    "    def clean_context_level(self, text: str) -> str:\n",
+    "        \"\"\"Clean text.\"\"\"\n",
+    "\n",
+    "        # Remove the ff:\n",
+    "        # Twitter handles and hashtags\n",
+    "        text = re.sub(\"[#@][\\w]+\", \"\", text)\n",
+    "\n",
+    "        # Special characters (except sentence endings)\n",
+    "        text = re.sub(\"[^\\w?!\\.,\\s]+\", \"\", text)\n",
+    "\n",
+    "        # Extra spaces\n",
+    "        text = re.sub(\"\\s+\", \" \", text)  # Multiple consecutive spaces\n",
+    "        text = re.sub(\"\\s\\.\", \".\", text)  # Space before period\n",
+    "        text = text.strip()  # Leading and trailing whitespaces\n",
+    "\n",
+    "        return text\n",
+    "        \n",
+    "    def clean_word_level(self, text: str) -> str:\n",
+    "        text = clean_context_level(text)\n",
+    "        # lowercase\n",
+    "        text = text.lower()\n",
+    "        # remove all special chars\n",
+    "        text = re.sub(\"[^A-Za-z0-9\\s]+\", \"\", text)\n",
+    "        # remove stopwords and lemmatize\n",
+    "        tokens = text.split()\n",
+    "        tokens = [t for t in tokens if t not in self.stop]\n",
+    "        tokens = [self.lemmatizer.lemmatize(t) for t in tokens]\n",
+    "        return tokens"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "south-desire",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Word level: ['panic', 'test']\n",
+      "Context level: Do not panic. This is a test!\n"
+     ]
+    }
+   ],
+   "source": [
+    "cleaner = TextCleaner()\n",
+    "\n",
+    "t = \"Do not panic. This is a test!\"\n",
+    "\n",
+    "wl = cleaner.clean_word_level(t)\n",
+    "cl = cleaner.clean_context_level(t)\n",
+    "print(\"Word level:\", wl)\n",
+    "print(\"Context level:\", cl)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "tough-volume",
    "metadata": {},
    "source": [
     "# Data Exploration"
@@ -263,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "lucky-tuition",
+   "id": "sweet-blood",
    "metadata": {},
    "source": [
     "## Finding Airlines"
@@ -271,7 +376,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "recognized-token",
+   "id": "designing-attribute",
    "metadata": {},
    "source": [
     "For this activity, I am given a dataset to work with. However, I do not anything about it or about how it was collected. \n",
@@ -282,8 +387,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "eastern-nerve",
+   "execution_count": null,
+   "id": "twelve-final",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get twitter handles and the number of times they are mentioned\n",
+    "twitter_handles_freq = {}\n",
+    "tw_handle_regex = re.compile(\"@[\\w]+\")\n",
+    "\n",
+    "for text in df['text']:\n",
+    "    handles_found = [h.lower() for h in tw_handle_regex.findall(text)]\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "described-experiment",
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +428,7 @@
        " '@dfwairport': 17}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,10 +438,10 @@
     "twitter_handles_freq = {}\n",
     "tw_handle_regex = re.compile(\"@[\\w]+\")\n",
     "\n",
-    "for value in df['text']:\n",
-    "    for h in tw_handle_regex.findall(value):\n",
-    "        h = h.lower()\n",
-    "        twitter_handles_freq[h] = twitter_handles_freq.get(h, 0) + 1\n",
+    "for text in df['text']:\n",
+    "    for handle in tw_handle_regex.findall(text):\n",
+    "        handle = handle.lower()\n",
+    "        twitter_handles_freq[handle] = twitter_handles_freq.get(h, 0) + 1\n",
     "        \n",
     "# Remove handles mentioned < 10 times\n",
     "twitter_handles_freq = {k:v for k, v in twitter_handles_freq.items() if v >= 10}\n",
@@ -328,7 +450,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "compressed-package",
+   "id": "revolutionary-spell",
    "metadata": {},
    "source": [
     "Aside from airports, the tweets also have mentions of artists such as Lady Gaga and Carrie Underwood. We remove these to get only the airline names."
@@ -336,8 +458,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "technical-annotation",
+   "execution_count": 29,
+   "id": "independent-medicare",
    "metadata": {},
    "outputs": [
     {
@@ -354,25 +476,21 @@
        " '@dfwairport': 17}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Remove non-airlines\n",
+    "# Remove non-airline terms\n",
     "non_airline_terms = ['@ladygaga', '@carrieunderwood', '@imaginedragons', '@fortunemagazine', '@love_dragonss', '@wsj']\n",
-    "for n in non_airport:\n",
-    "    try:\n",
-    "        twitter_handles_freq.pop(n)\n",
-    "    except Exception:\n",
-    "        pass\n",
-    "twitter_handles_freq"
+    "airlines_frequency = {handle: freq for handle, freq in twitter_handles_freq.items() if handle not in non_airline_terms}\n",
+    "airlines_frequency"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "regulation-preview",
+   "id": "legal-redhead",
    "metadata": {},
    "source": [
     "We then create a frequency graph to see the distribution of airline tweets in the corpus. "
@@ -381,7 +499,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "instant-thousand",
+   "id": "inside-albania",
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +526,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "social-murray",
+   "id": "actual-packing",
    "metadata": {},
    "source": [
     "It seems that there are 6 main airlines featured in the dataset (from Virgin America to JetBlue).\n",
@@ -419,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "amended-viking",
+   "id": "brief-ordinance",
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +563,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "damaged-cabinet",
+   "id": "absent-torture",
    "metadata": {},
    "source": [
     "# Date Distribution"
@@ -454,7 +572,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "executive-louisiana",
+   "id": "working-biotechnology",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "qualified-angola",
+   "id": "christian-ghana",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "accessory-entrepreneur",
+   "id": "spectacular-reading",
    "metadata": {},
    "outputs": [
     {
@@ -502,139 +620,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "associate-sport",
+   "id": "burning-designation",
    "metadata": {},
    "source": [
     "The tweets are from 16-24 of February, 2015."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "integral-operations",
-   "metadata": {},
-   "source": [
-    "## Text Cleaning"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "outdoor-dream",
-   "metadata": {},
-   "source": [
-    "We maintain two forms of text, for context-aware and word-level tasks.\n",
-    "\n",
-    "**Context Aware Tasks**\n",
-    "\n",
-    "For this, we remove:\n",
-    "* Special characters\n",
-    "    * Except periods at the end of a sentence, which is important for dependency parsing.\n",
-    "* leading and trailing whitespaces\n",
-    "* Twitter handles\n",
-    "* hashtags\n",
-    "\n",
-    "**Word-level Tasks:**\n",
-    "\n",
-    "Same as above, but additionally: \n",
-    "* lowercased\n",
-    "* lemmatized\n",
-    "* stopword-removed\n",
-    "* special characters removed\n",
-    "\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "angry-marketing",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def clean_context_level(text: str) -> str:\n",
-    "    \"\"\"Clean text.\"\"\"\n",
-    "    \n",
-    "    # Remove:\n",
-    "    \n",
-    "    # Twitter handles and hashtags\n",
-    "    text = re.sub(\"[#@][\\w]+\", \"\", text)\n",
-    "    \n",
-    "    # Special characters (except sentence endings)\n",
-    "    text = re.sub(\"[^\\w?!\\.,\\s]+\", \"\", text)\n",
-    "    \n",
-    "    # Extra spaces\n",
-    "    text = re.sub(\"\\s+\", \" \", text)  # Multiple consecutive spaces\n",
-    "    text = re.sub(\"\\s\\.\", \".\", text)  # Space before period\n",
-    "    text = text.strip()  # Leading and trailing whitespaces\n",
-    "    \n",
-    "    return text\n",
-    "\n",
-    "\n",
-    "def clean_word_level(text: str) -> str:\n",
-    "    text = clean_context_level(text)\n",
-    "    # lowercase\n",
-    "    text = text.lower()\n",
-    "    # remove all special chars\n",
-    "    text = re.sub(\"[^A-Za-z0-9]+\", \"\")\n",
-    "    # remove stopwords\n",
-    "\n",
-    "    # lemmatize\n",
-    "\n",
-    "\n",
-    "    \n",
-    "    \n",
-    "    pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "floppy-playback",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0                                               What said.\n",
-       "1        plus youve added commercials to the experience...\n",
-       "2        I didnt today... Must mean I need to take anot...\n",
-       "3        its really aggressive to blast obnoxious enter...\n",
-       "4                  and its a really big bad thing about it\n",
-       "                               ...                        \n",
-       "14635    thank you we got on a different flight to Chic...\n",
-       "14636    leaving over 20 minutes Late Flight. No warnin...\n",
-       "14637                    Please bring American Airlines to\n",
-       "14638    you have my money, you change my flight, and d...\n",
-       "14639    we have 8 ppl so we need 2 know how many seats...\n",
-       "Name: text, Length: 14640, dtype: object"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['text'].map(clean)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "progressive-bachelor",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pd.concat([df['text'], ], axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "banned-sigma",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
