--- a/sample_notebooks/06_nlp_context_aware.ipynb
+++ b/sample_notebooks/06_nlp_context_aware.ipynb
@@ -156,6 +156,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "international-response",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/TL/.pyenv/versions/3.8.5/lib/python3.8/site-packages/ipykernel/ipkernel.py:283: DeprecationWarning: `should_run_async` will not call `transform_cell` automatically in the future. Please pass the result to `transformed_cell` argument and any exception that happen during thetransform in `preprocessing_exc_tuple` in IPython 7.17 and above.\n",
+      "  and should_run_async(code)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<spacy.lang.en.English at 0x1ae7bf100>"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spacy.load('en_core_web_lg')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "sxGLeCyxk-xH",
    "metadata": {
@@ -866,7 +895,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "exceptional-choir",
+   "id": "minimal-oriental",
    "metadata": {},
    "outputs": [
     {
@@ -1863,7 +1892,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "separate-labor",
+   "id": "drawn-punishment",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1871,7 +1900,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "posted-indie",
+   "id": "further-minority",
    "metadata": {},
    "outputs": [],
    "source": []
