--- a/sample_notebooks/06_nlp_context_aware.ipynb
+++ b/sample_notebooks/06_nlp_context_aware.ipynb
@@ -1397,7 +1397,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
